Sidebar spacing issue fix, social login overlapping fix

--- a/public/themes/congnite/assets/css/custom.css
+++ b/public/themes/congnite/assets/css/custom.css
@@ -1543,6 +1543,7 @@ a:visited {
 	display: flex;
 	gap: 15px;
 	justify-content: center;
+	overflow: hidden;
 }
 
 .auth-content .login-form .login-text {
@@ -2027,4 +2028,12 @@ section.review .review-layouter .product-info .product-price .special-price {
 	border-top-color: #0031f0;
 	-webkit-animation: spin 1s ease-in-out infinite;
 	animation: spin 1s ease-in-out infinite;
+}
+
+div.advertisement-one-container img,
+div.advertisement-two-container img,
+div.advertisement-three-container img,
+div.advertisement-four-container img {
+	max-width: 100%;
+	height: 100%;
 }
